[project]
name = "email-triage-agent"
version = "0.1.0"
description = "An OpenEnv RL environment for email triage"
readme = "README.md"
requires-python = ">=3.10"
# These dependencies are mandatory for the structural check
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
    "requests",
    "openenv>=0.2.0",
    "openenv-core>=0.2.0"
]

# This entry point is exactly what the validator is looking for
[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
